--- a/templates/register.html
+++ b/templates/register.html
@@ -66,6 +66,10 @@
         <h2>Create an Account</h2>
         <form id="registerForm">
             <div class="form-group">
+                <label for="name">Full Name</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
                 <label for="email">Email Address</label>
                 <input type="email" id="email" name="email" required>
             </div>
