--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,9 @@
     {% set privileged_roles = ['Super Admin', 'Admin', 'Operation Mananger', 'Project Manager'] %}
     {% set is_privileged = user_roles | select('in', privileged_roles) | list | length > 0 %}
 
+    {% set admin_roles = ['Super Admin', 'Admin'] %}
+    {% set is_admin = user_roles | select('in', admin_roles) | list | length > 0 %}
+
     <div class="container-fluid">
         <div class="row g-0">
             <aside class="col-lg-2 d-none d-lg-block sidebar-desktop">
@@ -47,6 +50,19 @@
                             <a class="nav-link logout-link" href="#"><i class="bi bi-box-arrow-right me-2"></i> Logout</a>
                         </li>
                     </ul>
+
+                    {% if is_admin or 'User' in user_roles %}
+                    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
+                        <span>Nany Details</span>
+                    </h6>
+                    <ul class="nav flex-column mb-2"></ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/nanny-log-form">
+                            <i class="bi bi-person-hearts me-2"></i> Daily Nanny Log
+                        </a>
+                    </li>
+                    </ul>
+                    {% endif %}
 
                     {% if is_privileged or 'Supervisor/Site Officer' in user_roles or 'Foreman/Duty Officer' in user_roles %}
                     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
@@ -65,13 +81,8 @@
                         {% if is_privileged %}
                             <li class="nav-item"><a class="nav-link" href="/material-requisition-form"><i class="bi bi-box-seam me-2"></i> Material Requisition</a></li>
                         {% endif %}
-                         {% if is_privileged or 'User' in user_roles %}
-                     <li class="nav-item">
-                        <a class="nav-link" href="/nanny-log-form">
-                            <i class="bi bi-person-hearts me-2"></i> Daily Nanny Log
-                        </a>
-                    </li>
-                    {% endif %}
+                        
+                     
                     </ul>
                     {% endif %}
 
@@ -118,7 +129,18 @@
                          <a class="nav-link logout-link" href="#"><i class="bi bi-box-arrow-right me-2"></i> Logout</a>
                      </li>
                  </ul>
-
+                 {% if is_admin or 'User' in user_roles %}
+                    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
+                        <span>Nany Details</span>
+                    </h6>
+                    <ul class="nav flex-column mb-2"></ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/nanny-log-form">
+                            <i class="bi bi-person-hearts me-2"></i> Daily Nanny Log
+                        </a>
+                    </li>
+                    </ul>
+                    {% endif %}
                  {% if is_privileged or 'Supervisor/Site Officer' in user_roles or 'Foreman/Duty Officer' in user_roles %}
                  <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
                      <span>Forms</span>
